--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+
+<div class="row">
+  <div class="col-lg-9">
+
+    <div class="row">
+      <div class="col-md-6">
+        <h2>
+          <small>Projekt 1</small>
+          <br/>
+          Backlog
+        </h2>
+      </div>
+    </div>
+    <hr/>
+    <p>Find me in app/views/welcome/index.html.erb</p>
+
+  </div>
+  <div class="col-lg-3">
+    <div class="well sidebar-nav">
+      <ul class="nav nav-list">
+        <li><%= link_to "Backlog", "/path1" %></li>
+        <li><%= link_to "Sprint 1", "/path1" %></li>
+        <li><%= link_to "Sprint 2", "/path1" %></li>
+        <li><%= link_to "Sprint 3 (Aktuell)", "/path1" %></li>
+        <li><%= link_to "Create Sprint", "/path1" %></li>
+      </ul>
+
+    </div><!--/.well -->
+  </div><!--/span-->
+</div><!--/row-->
