Devise, Rolify, cancan eingefügt

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,74 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>ScrumPm</title>
-    <%= csrf_meta_tags %>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "SCRUM-TOOL" %></title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  <body>
-    <%= yield %>
-  </body>
+  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+  <!--[if lt IE 9]>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
+  <![endif]-->
+</head>
+<body>
+
+<div class="navbar navbar-default navbar-static-top">
+  <div class="container">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">SCRUM-TOOL</a>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Dashboard", "/path1" %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projekte
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Projekt 1</a></li>
+            <li><a href="#">Projekt 2</a></li>
+            <li><a href="#">Projekt 3</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Neues Projekt erstellen</a></li>
+          </ul>
+        </li>
+        <li><%= link_to "Roadmap", "/path3" %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+            <% if current_user.has_role? :productowner %>
+                <li>Product Owner</li>
+            <% end %>
+            <% if current_user.has_role? :team %>
+                <li>Scrum Team</li>
+            <% end %>
+            <% if current_user.has_role? :master %>
+                <li>Scrum Master</li>
+            <% end %>
+            <li><%= link_to_unless_current("Abmelden", destroy_user_session_path, method: :delete) %></li>
+        <% else %>
+            <li><%= link_to_unless_current("Anmelden", new_user_session_path) %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <%= yield %>
+  <footer>
+    <p>&copy; TheRankZz 2017</p>
+  </footer>
+  <p class="text-success"><%= notice %></p>
+  <div class="text-danger"><%= alert %></div>
+</div> <!-- /container -->
+
+</body>
 </html>
