--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,9 @@
             <li><a href="#">Projekt 2</a></li>
             <li><a href="#">Projekt 3</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Neues Projekt erstellen</a></li>
+            <li>
+              <%= link_to "Neues Projekt", new_project_path %>
+            </li>
           </ul>
         </li>
         <li><%= link_to "Roadmap", "/path3" %></li>
