--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,3 +22,6 @@
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
+
+<%= link_to 'New Backlogitem', new_sprint_path(:project => @project.id ) %>
+
