Task anlegen, zuordnen und Prozentanzeige Projekt

--- a/app/views/board/index.html.erb
+++ b/app/views/board/index.html.erb
@@ -1,5 +1,5 @@
 <h3>
-  <small>[Projektname]</small>
+  <small><%= @project.name %></small>
   <br/>
   Scrum Board
 </h3>
@@ -14,95 +14,54 @@
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <td style="width: 200px;">
-      <div class="userstory">
-        <div class="caption">
-          <h5>User Story 1</h5>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
-        </div>
-      </div>
-    </td>
-    <td>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Task 1</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-      <br>
-    </td>
-    <td>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-    </td>
-    <td>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-    </td>
-  </tr>
-  <tr>
-    <td style="width: 200px;">
-      <div class="userstory">
-        <div class="caption">
-          <h5>User Story 2</h5>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
-        </div>
-      </div>
-    </td>
-    <td>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Task 1</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-      <br>
-    </td>
-    <td>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Task 56</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor sit amet</a>
-      </div>
-    </td>
-    <td>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Dolor sit amet</a>
-      </div>
-      <div class="task">
-        <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-        <a>Lorem ipsum dolor</a>
-      </div>
-    </td>
-  </tr>
+
+  <% @items.each do |item| %>
+      <tr>
+        <td style="width: 200px;">
+          <div class="userstory">
+            <div class="caption">
+              <h5><%= item.title %>></h5>
+              <p><%= item.description %></p>
+            </div>
+          </div>
+          <br>
+
+          <%= link_to '+ Task hinzufügen', new_task_path(:backlog => item.id) %>
+
+        </td>
+        <td>
+
+
+          <% item.tasks.where(:state => :New).each do |t|  %>
+              <div class="task">
+                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                <%= link_to t.title, edit_task_path(:id => t.id) %>
+              </div>
+          <% end %>
+
+
+          <br>
+        </td>
+        <td>
+
+          <% item.tasks.where(:state => :InProgress).each do |t|  %>
+              <div class="task">
+                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                <%= link_to t.title, edit_task_path(:id => t.id) %>
+              </div>
+          <% end %>
+        </td>
+        <td>
+
+          <% item.tasks.where(:state => :Done).each do |t|  %>
+              <div class="task">
+                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                <%= link_to t.title, edit_task_path(:id => t.id) %>
+              </div>
+          <% end %>
+
+        </td>
+      </tr>
+  <% end %>
   </tbody>
 </table>
