--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,8 +12,11 @@
     <hr/>
 
     <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-        60%
+      <div class="progress-bar progress-bar-success" style="width: <%= @donePercantage %>%">
+        <%= @donePercantage.to_i %>% Done
+      </div>
+      <div class="progress-bar progress-bar-warning" style="width: <%= @inprogressPercantage %>%">
+        <%= @inprogressPercantage.to_i %>% In Progress
       </div>
     </div>
   </div>
@@ -25,7 +28,9 @@
 
 
 <%= link_to 'Backlog', backlogitems_path(:project => @project.id) %> |
-<%= link_to 'Scrum Board', board_index_path(:project => @project.id) %>
+<%= link_to 'Scrum Board', board_index_path(:project => @project.id) %> |
+<%= link_to 'Sprints', sprints_path(:project => @project.id) %>
+
 
 
 <hr/>
