--- a/app/views/backlogitems/index.html.erb
+++ b/app/views/backlogitems/index.html.erb
@@ -1,8 +1,10 @@
 <h3>
   <small>
-    <%= @project.name %>
+    Backlog
   </small>
-  <br/> Backlog
+  <br/>
+  <%= @project.name %>
+
 </h3>
 <hr/>
 
