--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,65 +1,78 @@
+
+
+
 <%= form_with(model: task, local: true) do |form| %>
-  <% if task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
-
-      <ul>
-      <% task.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-    <%= form.text_field :backlogitem_id, id: :backlogitem_id %>
 
 
-    <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :task_title %>
-  </div>
+<div class="modal-body">
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description, id: :task_description %>
-  </div>
+          <% if task.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-  <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author, id: :task_author %>
-  </div>
+                <ul>
+                  <% task.errors.full_messages.each do |message| %>
+                      <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+          <% end %>
 
-  <div class="field">
-    <%= form.label :creationdate %>
-    <%= form.date_select :creationdate, id: :task_creationdate %>
-  </div>
+          <%= form.hidden_field :backlogitem_id, id: :backlogitem_id %>
 
-  <div class="field">
-    <%= form.label :assignedto %>
-    <%= form.text_field :assignedto, id: :task_assignedto %>
-  </div>
 
-  <div class="field">
-    <%= form.label :state %>
-    <%= form.select(:state, Task.states.keys) %>
-  </div>
+          <div class="form-group">
+            <%= form.label :title %>
+              <%= form.text_field :title, id: :task_title, :class => 'form-control', validate: true  %>
+          </div>
 
-  <div class="field">
-    <%= form.label :priority %>
-    <%= form.select(:priorty, Task.priorties.keys) %>
-  </div>
+          <div class="form-group">
+            <%= form.label :description %>
+              <%= form.text_area :description, id: :task_description, :class => 'form-control' %>
+          </div>
 
-  <div class="field">
-    <%= form.label :remainingwork %>
-    <%= form.number_field :remainingwork, id: :task_remainingwork %>
-  </div>
+          <div class="form-group">
+            <%= form.label :author %>
 
-  <div class="field">
-    <%= form.label :effort %>
-    <%= form.number_field :effort, id: :task_effort %>
-  </div>
+              <%= form.text_field :author, id: :task_author, :class => 'form-control' %>
+          </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+          <div class="form-group">
+            <%= form.label :creationdate %>
+
+              <%= form.date_select :creationdate, id: :task_creationdate, :class => 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :assignedto %>
+
+              <%= form.text_field :assignedto, id: :task_assignedto, :class => 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :state %>
+            <%= form.select(:state, Task.states.keys) %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :priority %>
+              <%= form.select(:priorty, Task.priorties.keys) %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :remainingwork %>
+              <%= form.number_field :remainingwork, id: :task_remainingwork, :class => 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :effort%>
+            <%= form.number_field :effort, id: :task_effort, :class => 'form-control' %>
+          </div>
+
+</div>
+<div class="modal-footer">
+  <%= link_to 'Close', board_index_path(:project => @project_id ), :class => 'btn btn-default' %>
+  <%= form.submit :class => 'btn btn-primary' %>
+</div>
 <% end %>
+
