--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
   <%= yield %>
 
   <div class="alerts">
@@ -77,6 +77,7 @@
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
+          <strong>Warning!</strong>
           <%= alert %>
         </div>
     <% end %>
