--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Project</h1>
-
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h3>Editing Project</h3>
+    <hr/>
+  </div>
+</div>
 <%= render 'form', project: @project %>
-
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
