--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Project</h1>
-
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h3>Neues Projekt anlegen</h3>
+    <hr/>
+  </div>
+</div>
 <%= render 'form', project: @project %>
-
-<%= link_to 'Back', projects_path %>
