--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Task</h1>
-
+<div class="modal-header">
+  <h4 class="modal-title" id="myModalLabel">Edit Task</h4>
+</div>
 <%= render 'form', task: @task %>
 
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
