--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Task</h1>
-
+<div class="modal-header">
+  <h4 class="modal-title" id="myModalLabel">New Task</h4>
+</div>
 <%= render 'form', task: @task %>
-
-<%= link_to 'Back', tasks_path %>
