--- a/app/views/backlogitems/edit.html.erb
+++ b/app/views/backlogitems/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Editing Backlogitem</h1>
-
+<div class="modal-header">
+  <h4 class="modal-title" id="myModalLabel">Editing Backlogitem</h4>
+</div>
 <%= render 'form', backlogitem: @backlogitem %>
