--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,9 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h3>Neues Projekt anlegen</h3>
-    <hr/>
-  </div>
-</div>
+<div class="container">
+  <h3>
+    <small></small>
+    <br/>
+    New Project
+  </h3>
+  <hr/>
 <%= render 'form', project: @project %>
+</div>
