--- a/app/views/backlogitems/index.html.erb
+++ b/app/views/backlogitems/index.html.erb
@@ -8,7 +8,7 @@
 </h3>
 <hr/>
 
-<%= link_to '+ Neues Item', new_backlogitem_path(:project => @project.id ) %>
+<%= link_to '+ Backlogitem hinzufügen', new_backlogitem_path(:project => @project.id ),  data: {toggle: "modal", target: "#modal"} %>
 <hr/>
 <table class="table">
   <thead>
@@ -19,23 +19,29 @@
       <th>State</th>
       <th>Priorty</th>
       <th>Effort</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @backlogitems.each do |backlogitem| %>
       <tr>
-        <td><%= backlogitem.title %></td>
+        <td><%= link_to backlogitem.title, edit_backlogitem_path(backlogitem), data: {toggle: "modal", target: "#modal"}  %></td>
         <td><%= backlogitem.creationdate %></td>
         <td><%= backlogitem.assignedto %></td>
         <td><%= backlogitem.state %></td>
         <td><%= backlogitem.priorty %></td>
         <td><%= backlogitem.effort %></td>
-        <td><%= link_to 'Anzeigen', backlogitem %></td>
-        <td><%= link_to 'Bearbeiten', edit_backlogitem_path(backlogitem) %></td>
         <td><%= link_to 'Löschen', backlogitem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    </div>
+  </div>
+</div>
