--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.tile  {
+  display: inline-block;
+  border: 1px solid #DADADA;
+  width: 150px;
+  height: 150px;
+  background-color: #3498db;
+  color: #F7F7F7;
+
+  &:hover {
+    background-color: #2980b9;
+    color: #F7F7F7;
+    
+  }
+
+  .glyphicon {
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 15px;
+    font-size: 64px;
+    margin-bottom: 10px;
+  }
+
+  .name {
+    text-align: center;
+    position: relative;
+  }
+}
