--- a/app/views/backlogitems/index.html.erb
+++ b/app/views/backlogitems/index.html.erb
@@ -54,16 +54,9 @@
     <h3>Visits By Day</h3>
 
 
-    <% series_b = {"1 Tag" => 30, "2 Tag" => 29,"3 Tag" => 26} %>
 
-    <h1><%= @todayDate%></h1>
-    <h1><%= @countDate%></h1>
-    <h1><%=@tageImSprint%></h1>
-    <h1><%=@perDay%></h1>
-    <h1><%=@back%></h1>
-
-    <%= line_chart [{'data': @noises, 'name': 'Ideal'},
-                    {'data': @series_b, 'name': 'Remain'}] %>
+    <%= line_chart [{'data': @serieAverage, 'name': 'Ideal'},
+                    {'data': @serieReal, 'name': 'Remain'}], {library: {hAxis: {title: "Tage"}, vAxis: {title: "Scrum Points"}}} %>
 
 
   </div>
