--- a/app/views/board/index.html.erb
+++ b/app/views/board/index.html.erb
@@ -23,6 +23,8 @@
     </select>
   </div>
   <div>
+
+    <%= link_to 'Scrum Board', board_index_path(:project => @project.id) %> |
     <button class="btn btn-default" type="submit">Aktualisieren</button>
   </div>
 </div>
